<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_screen_bg"
    tools:context="com.togocourier.ui.activity.UserSelectionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/user_selecction_logo" />

            <ImageView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:src="@drawable/user_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/user_type"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/textLeargeSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:weightSum="1"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp">

                <LinearLayout
                    android:id="@+id/custmerLay"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/custmerBtn"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:src="@drawable/active_customer_icon" />

                    <TextView
                        android:id="@+id/custmerTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/montserrat_light"
                        android:text="@string/customer"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/textNormalSize" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/couriorLay"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/couriorBtn"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:src="@drawable/inactive_courier_icon" />

                    <TextView
                        android:id="@+id/couriorTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/montserrat_light"
                        android:text="@string/courior"
                        android:textColor="@color/colorDivider"
                        android:textSize="@dimen/textNormalSize" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/continueBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_38sdp"
                android:background="@drawable/continue_btn_bg"
                android:fontFamily="@font/proxima_nova_semibold"
                android:text="@string/continueBtnTxt"
                android:textAllCaps="false"
                android:textColor="@drawable/continue_btn_text_color"
                android:textSize="@dimen/textLeargeSize" />/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
