<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.togocourier.ui.activity.HomeActivity">

    <include
        android:id="@+id/headerLay"
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:id="@+id/fragmentPlace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/headerLay"/>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinateLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_50sdp" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/tababr_bg"
        android:paddingTop="@dimen/_5sdp"
        android:weightSum="1">

        <RelativeLayout
            android:id="@+id/firstTabLay"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/firstTabImage"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/active_my_post_ico" />

                <TextView
                    android:id="@+id/firstTabTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/new_post"
                    android:textColor="@color/colorBtn"
                    android:textSize="@dimen/textTabSize" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/secondTabLay"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/secondTabImage"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/inactive_notification_ico" />

                <TextView
                    android:id="@+id/secondTabTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/notification"
                    android:textColor="@color/colorTextHint"
                    android:textSize="@dimen/textTabSize" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/thirdTabLay"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/thirdTabImage"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/inactive_chat_ico" />

                <TextView
                    android:id="@+id/thirdTabTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/chat"
                    android:textColor="@color/colorTextHint"
                    android:textSize="@dimen/textTabSize" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fourthTabLay"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/fourthTabImage"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/inactive_profile_ico" />

                <TextView
                    android:id="@+id/fourthTabTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/profile"
                    android:textColor="@color/colorTextHint"
                    android:textSize="@dimen/textTabSize" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fifthTabLay"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/fifthTabImage"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/inactive_setting_ico" />

                <TextView
                    android:id="@+id/fifthTabTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/settings"
                    android:textColor="@color/colorTextHint"
                    android:textSize="@dimen/textTabSize" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
