<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_screen_bg"
    tools:context="com.togocourier.ui.activity.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/circle_bg">

                <ImageView
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/user_selecction_logo" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/emailIcon"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/email_ico" />

                <View
                    android:id="@+id/divEmal"
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_26sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@id/emailIcon"
                    android:layout_toRightOf="@id/emailIcon"
                    android:background="@color/colorDivider" />

                <EditText
                    android:id="@+id/emailTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@id/divEmal"
                    android:layout_toRightOf="@id/divEmal"
                    android:background="@null"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/textNormalSize"
                    android:singleLine="true"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorDivider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/pwdIcon"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/key_ico" />

                <View
                    android:id="@+id/divPwd"
                    android:layout_width="1dp"
                    android:layout_height="@dimen/_26sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@id/pwdIcon"
                    android:layout_toRightOf="@id/pwdIcon"
                    android:background="@color/colorDivider" />

                <EditText
                    android:id="@+id/pwdTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_toEndOf="@id/divPwd"
                    android:layout_toRightOf="@id/divPwd"
                    android:background="@null"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/textNormalSize"
                    android:singleLine="true"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorDivider" />

            <CheckBox
                android:id="@+id/checkbox_remember_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Remember me"
                android:textColor="@color/colorTextHint"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_5sdp"/>

            <Button
                android:id="@+id/signInBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:background="@drawable/continue_btn_bg"
                android:fontFamily="@font/proxima_nova_semibold"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@drawable/continue_btn_text_color"
                android:textSize="@dimen/textMediamSize" />

            <TextView
                android:id="@+id/forgotPwdTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_regular"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/textNormalSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginRight="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center_vertical"
                android:weightSum="1">

                <View
                    android:layout_width="0dip"
                    android:layout_height="1dp"
                    android:layout_weight=".4"
                    android:background="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:text="OR"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/textLeargeSize"
                    android:fontFamily="@font/proxima_nova_semibold"/>

                <View
                    android:layout_width="0dip"
                    android:layout_height="1dp"
                    android:layout_weight=".4"
                    android:background="@color/colorPrimaryDark" />
            </LinearLayout>


            <Button
                android:id="@+id/fbLoginBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:background="@drawable/fb_btn_bg"
                android:fontFamily="@font/proxima_nova_semibold"
                android:text="@string/login_with_facebook"
                android:textAllCaps="false"
                android:textColor="@drawable/fb_btn_text_color"
                android:textSize="@dimen/textMediamSize" />

            <Button
                android:id="@+id/gmailLoginBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/fb_btn_bg_google"
                android:fontFamily="@font/proxima_nova_semibold"
                android:text="Login With Gmail"
                android:textAllCaps="false"
                android:textColor="@drawable/fb_btn_text_color"
                android:textSize="@dimen/textMediamSize" />


            <LinearLayout
                android:id="@+id/signUpLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proxima_nova_regular"
                    android:text="@string/dont_have_an_account"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/textNormalSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_3sdp"
                    android:fontFamily="@font/proxima_nova_semibold"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorBtn"
                    android:textSize="@dimen/textNormalSize" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/AlertDialog.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
